# embedded-update

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml
src/: device.rs  lib.rs  protocol.rs  service.rs  traits.rs  updater.rs
src/device/: mod.rs  serial.rs  simulator.rs
src/service/: drogue.rs  hawkbit.rs  memory.rs  mod.rs  serial.rs
tests/: drogue.rs  serial.rs
