[package]
name = "embedded-update"
version = "0.6.1"
edition = "2021"
resolver = "2"
description = "Firmware updates for embedded devices supporting multiple update services"
documentation = "https://docs.rs/embedded-update"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/embedded-update"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>"
]
license = "Apache-2.0"
keywords = ["embedded", "async", "dfu", "no_std", "ota"]
exclude = [".github"]

[dependencies]
heapless = "0.7"
serde = { version = "1", features = ["derive"], default-features = false }
postcard = { version = "1.0", default-features = false, optional = true }
embedded-io = { version = "0.3.0", default-features = false, features = ["async"], optional = true }

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
embedded-hal-async = {version = "0.1.0-alpha.1", optional = true }
futures = { version =  "0.3", default-features = false, optional = true }
reqwless = { path = "../reqwless", optional = true }
embedded-nal-async = { version = "0.1.0", git = "https://github.com/lulf/embedded-nal.git", rev = "7e46d533090882ce9a449f544055c09e6d241e55", optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
serde_cbor = { version = "0.11", default-features = false, optional = true }
embedded-tls = { version = "0.8.0", default-features = false, features = ["async"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_cbor = { version = "0.11", features = ["std"] }
embedded-io = { version = "0.3.0", default-features = false, features = ["async", "std"] }

[features]
default = ["nightly"]
nightly = ["embedded-hal-async", "futures", "postcard", "embedded-io"]
defmt = ["dep:defmt"]
drogue = ["reqwless", "embedded-nal-async", "rand_core", "serde_cbor"]
tls = ["embedded-tls"]
std = []
